# internal/model/converter/hero_slide_converter.go
@@ -1,0 +1,17 @@
+package converter
+
+import (
+    "pura-agung-kertajaya-backend/internal/entity"
+    "pura-agung-kertajaya-backend/internal/model"
+)
+
+func ToHeroSlideResponse(h entity.HeroSlide) model.HeroSlideResponse {
+    return model.HeroSlideResponse{
+        ID:         h.ID,
+        ImageURL:   h.ImageUrl,
+        OrderIndex: h.OrderIndex,
+        IsActive:   h.IsActive,
+        CreatedAt:  h.CreatedAt,
+        UpdatedAt:  h.UpdatedAt,
+    }
+}
